refactoring the css stylinig

--- a/saad-portfolio/src/styles/entry.module.css
+++ b/saad-portfolio/src/styles/entry.module.css
@@ -1,5 +1,5 @@
 .entryBackground {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url('../assets/bg.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url('../assets/bg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
