--- a/saad-portfolio/src/styles/entry.module.css
+++ b/saad-portfolio/src/styles/entry.module.css
@@ -14,8 +14,48 @@
 .entryTitle {
     position: relative;
     color: white;
+    font-size: 3rem;
+}
+.entryWord {
+    color: palevioletred;
 }
 
 .entryButton {
-
+    -webkit-tap-highlight-color: transparent;
+    -webkit-appearance: button;
+    background-color: #000;
+    background-image: none;
+    color: #fff;
+    font-size: 100%;
+    font-weight: 900;
+    line-height: 1.5;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
 }
+
+.entryButton {
+    --thickness: 0.3rem;
+    --roundness: 1.2rem;
+    --color: #eff6ff;
+    --opacity: 0.6;
+    -webkit-backdrop-filter: blur(100px);
+    backdrop-filter: blur(100px);
+    background: none;
+    background: hsl(341, 59%, 65%);
+    border: none;
+    border-radius: var(--roundness);
+    color: var(--color);
+    cursor: pointer;
+    display: block;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 0.8rem 3rem;
+    position: relative;
+}
+.entryButton:hover {
+    background: hsl(341, 64%, 54%);
+    filter: brightness(1.2);
+}
+
+
