--- a/saad-portfolio/src/styles/entry.module.css
+++ b/saad-portfolio/src/styles/entry.module.css
@@ -12,7 +12,9 @@
 }
 
 .entryTitle {
-    position: relative;
+    position: absolute;
+    top: 0%;
+    left: 1%;
     color: white;
     font-size: 3rem;
 }
@@ -32,6 +34,8 @@
     margin: 0;
     padding: 0;
     text-transform: uppercase;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .entryButton {
@@ -50,12 +54,40 @@
     display: block;
     font-size: 1rem;
     font-weight: 500;
+    margin-top: 10rem;
     padding: 0.8rem 3rem;
-    position: relative;
+    position: absolute;
+    bottom : 1rem;
+    animation: fadeIn 0.5s;
+    animation-delay: 0s; /* 10 seconds */
+    animation-fill-mode: forwards;
+
 }
 .entryButton:hover {
     background: hsl(341, 64%, 54%);
     filter: brightness(1.2);
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    to {
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+.entryTyping {
+    color: palevioletred;
+    font-size: 2rem;
+    text-align: center;
+    position: absolute;
+    justify-content: space-evenly;
+
+
 }
 
 
