--- a/saad-portfolio/src/styles/skills.module.css
+++ b/saad-portfolio/src/styles/skills.module.css
@@ -27,6 +27,10 @@
     font-size: 5rem;
 }
 
+.skillsIconB {
+    width: 5rem;
+}
+
 .skillsAnchor {
     color: black;
 }
@@ -37,7 +41,7 @@
 
 .skillsIcon:hover {
     transform: translateY(-5px) scale(1.1);
-    transition: transform 0.3s ease; 
+    transition: transform 0.3s ease;
 }
 
 .skillsHover {
@@ -61,3 +65,4 @@
     opacity: 1;
     visibility: visible;
 }
+
