--- a/saad-portfolio/src/components/navbar.module.css
+++ b/saad-portfolio/src/components/navbar.module.css
@@ -25,12 +25,17 @@
 }
 
 .navLink {
+    color: black;
     text-decoration: none;
-    color: #333;
-    font-weight: bold;
     transition: color 0.3s ease;
 }
 
 .navLink:hover {
-    color: #007BFF;
+    color: pink;
 }
+
+.navLink.active {
+    color: palevioletred;
+    font-weight: bold;
+}
+
