--- a/saad-portfolio/src/components/navbar.module.css
+++ b/saad-portfolio/src/components/navbar.module.css
@@ -1,3 +1,6 @@
+/*transition colour for navbar is different to the active colour*/
+/*idk if i like center navbar with offhand right resume link or maybe putting resume at footer?
+could be cool if it was in the hero section?*/
 .navbar {
     position: sticky;
     top: 0;
@@ -9,12 +12,13 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(201, 178, 250, 0.3);
-
+    height: 4dvh;
 }
 
 .navList {
     display: flex;
-    justify-content: space-around;
+    justify-content: left; /* either center or left(column-gap) */
+    column-gap: 1rem;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -36,6 +40,11 @@
 
 .navLink.active {
     color: palevioletred;
-    font-weight: bold;
+    font-weight: 900;
+}
+
+.navResume {
+    position: absolute;
+    right: 1rem;
 }
 
