--- a/saad-portfolio/src/styles/entry.module.css
+++ b/saad-portfolio/src/styles/entry.module.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Gothic+A1&family=Nanum+Myeongjo:wght@400;700;800&family=PT+Sans&family=VT323&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Gothic+A1&family=Nanum+Myeongjo:wght@400;700;800&family=PT+Sans&family=VT323&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Gothic+A1&family=Nanum+Myeongjo:wght@400;700;800&family=Oswald:wght@200..700&family=PT+Sans&family=VT323&display=swap');
 .entryBackground {
-    background-color: #333333;
+    background-color: whitesmoke;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -13,15 +12,16 @@
 
 .entryTitle {
     position: absolute;
-    top: 10%;
+    top: 0;
     color: ghostwhite;
-    font-size: 3rem;
-    font-family: "Averia Serif Libre", serif;
+    font-size: 4rem;
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     visibility: hidden;
     opacity: 0;
-    animation: fadeIn 2s;
+    animation: fadeIn 3s;
     animation-delay: 0.5s;
     animation-fill-mode: forwards;
 }
@@ -71,6 +71,37 @@
     filter: brightness(1.2);
 }
 
+.entryTypeBox {
+    position: relative;
+    bottom: 210px;
+    left: -300px; /* 215px for center*/
+    width: 80%;
+    height: 6rem;
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+.entryTyping, .entryTypingName , .entryTypingError {
+    position: relative;
+    font-family: "VT323", monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 4rem;
+    color: black;
+    margin: 0.2rem 0;
+    white-space: nowrap;
+}
+
+.entryTypingName {
+    color: rebeccapurple;
+}
+
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -81,33 +112,6 @@
         opacity: 1;
         visibility: visible;
     }
-}
-
-.entryTypeBox {
-    position: relative;
-    bottom: 50px;
-    left: 155px; /* 215px for center*/
-    width: 80%;
-    height: 6rem;
-    max-width: 600px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    text-align: left;
-}
-
-.entryTyping {
-    position: relative;
-    font-family: "VT323", monospace;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1.5rem;
-    color: ghostwhite;
-    margin: 0.5rem 0;
-    white-space: nowrap;
-
 }
 
 @media (max-width: 768px) {
