--- a/saad-portfolio/src/styles/hero.module.css
+++ b/saad-portfolio/src/styles/hero.module.css
@@ -1,10 +1,13 @@
 .heroContainer {
-    padding: 4rem 2rem;
+    padding: 8rem 2rem;
     background-color: #f9f9f9;
-    text-align: center;
 }
 
 .heroContent {
+    position: absolute;
+
+    text-align: center;
+
     max-width: 1200px;
     margin: 0 auto;
 }
