updated entry page text and classNames

--- a/saad-portfolio/src/styles/entry.module.css
+++ b/saad-portfolio/src/styles/entry.module.css
@@ -87,7 +87,7 @@
     text-align: left;
 }
 
-.entryTyping, .entryTypingName , .entryTypingError {
+.entryTyping, .entryTypingName {
     position: relative;
     font-family: "VT323", monospace;
     font-weight: 400;
