--- a/saad-portfolio/src/styles/projects.module.css
+++ b/saad-portfolio/src/styles/projects.module.css
@@ -1,6 +1,6 @@
 .projectsContainer {
-    padding: 4rem 2rem;
-    background-color: #f9f9f9;
+    padding: 6rem 2rem;
+    background-color: ghostwhite;
     text-align: center;
 }
 
