--- a/saad-portfolio/src/styles/skills.module.css
+++ b/saad-portfolio/src/styles/skills.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Gothic+A1&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nanum+Myeongjo:wght@400;700;800&family=Oswald:wght@200..700&family=PT+Sans&family=VT323&display=swap');
+
 .skillsContainer {
     padding: 6rem 2rem;
     background-color: ghostwhite;
@@ -11,6 +13,9 @@
 
 .skillsTitle {
     font-size: 2.5rem;
+    font-family: "Lato", sans-serif;
+    font-weight: 800;
+    font-style: normal;
     margin-bottom: 1rem;
     padding-bottom: 5rem;
 }
@@ -54,6 +59,9 @@
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     font-size: 0.875rem;
+    font-family: "Lato", sans-serif;
+    font-weight: 300;
+    font-style: normal;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
