--- a/saad-portfolio/src/styles/projects.module.css
+++ b/saad-portfolio/src/styles/projects.module.css
@@ -29,8 +29,8 @@
 }
 
 .projectGif {
-    flex: 1 1 calc(33.333% - 2rem);
-    max-width: 300px;
+    flex: 1 1 calc(33.333% - 2rem); /* Ensures 3 items per row with gaps */
+    max-width: 300px; /* Optional: limits the size of each GIF */
     display: flex;
     justify-content: center;
     align-items: center;
